--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <img id="logo" src="assets/images/logo.svg" alt="Extensions logo">
       <button>
-        <a href="indexDark.html"><img src="assets/images/icon-moon.svg" alt="moon logo"></a>
+        <a href="Dark/indexDark.html"><img src="assets/images/icon-moon.svg" alt="moon logo"></a>
       </button>
     </nav>
     <header>
